tdf#127461: fix data provider crashes

See bts provided in the bugtracker

Change-Id: I1cc38add93446f8372c80ca45962b04bfa627923
Reviewed-on: https://gerrit.libreoffice.org/78803
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>